Support Qt < 6.8

QStringDecoder and QStringEncoder only support char* as argument in
older Qt versions.

BUG: 507927
FIXED-IN: 5.2.2
(cherry picked from commit aac6f62208c3bc856c70971ca98d44558e7d6e93)